fixes front page media query for search box on small screens

--- a/pokedex/src/components/Search/Search.css
+++ b/pokedex/src/components/Search/Search.css
@@ -19,3 +19,9 @@
         width: 50%;
     }
 }
+
+@media (max-width: 550px) {
+    .form-group input {
+        width: 100%; 
+    }
+}
